# app/Models/Notice.php
@@ -1,0 +1,19 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class Notice extends Model
+{
+    use HasFactory;
+
+    protected $fillable = [
+        'date',
+        'importance',
+        'title',
+        'body',
+        'id_group'
+    ];
+}
